// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should render correctly 1`] = `
<styled.div>
  <styled.input
    disabled={false}
  />
</styled.div>
`;

exports[`TextInput should render correctly when disabled 1`] = `
<styled.div>
  <styled.input
    disabled={true}
  />
</styled.div>
`;

exports[`TextInput should render correctly with a value 1`] = `
<styled.div>
  <styled.input
    disabled={false}
    value="test"
  />
</styled.div>
`;
